--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
